Enable experimental Vector scanner on JDK 21+
Refs #658